# async-ai-task-runner

./: .dockerignore  .env.docker  .env.example  .gitignore  API_TESTING_GUIDE.md  CLAUDE.md  CLAUDE_COMMANDS_SUMMARY.md  DAY1_DEVELOPMENT_DOCUMENTATION.md  DAY2_COMPREHENSIVE_SUMMARY.md  Dockerfile  Dockerfile.worker  FASTAPI_PYDANTIC_ANALYSIS.md  QA 审计报告.md  README.md  TASKS_SQL_QUERIES.md  alembic.ini  claude_desktop_config.json  claudeai.md  demo_fastapi_pydantic.py  docker-compose.prod.yml  docker-compose.yml  postgresql_timezone_fix.md  pyproject.toml  pytest.ini  pytest.ini.backup  quick_test.py  run_mcp_server.py  run_tests.py  task.md  test.db  test_api.py  test_api_pytest.py  test_basic_imports.py  test_complete_integration.py  test_mcp_connection.py  test_mcp_server.py  test_simple.py  test_simple_app.py  working_tests.py
.claude/: DEVELOPMENT_WORKFLOW.md  QUICK_START.md  README.md
.claude/agents/: mentor.md  qa.md  sdet.md
.claude/commands/: analyze-architecture.md  analyze-code.md  analyze-performance.md  analyze-technology.md  analyze.md  audit.md  catchup.md  commit.md  develop.md  docs.md  learn.md  project-clean.md  project-info.md  project-management.md  project-setup.md  project-status.md  retro.md  status_check.md  system.md  test.md
alembic/: env.py
alembic/versions/: 1408c59b0b41_add_provider_field_to_tasks_table.py  8479ad8b8fea_create_tasks_table.py
app/: database.py  main.py  models.py  schemas.py
demos/: pydantic_concepts_demo.py
docs/: CELERY_BASIC_CONFIGURATION_GUIDE.md  CELERY_BEGINNER_TUTORIAL.md  CELERY_QUEUE_ROUTING_EXPLAINED.md  CELERY_QUICK_REFERENCE.md  DAY2_AFTERNOON_TECHNICAL_ANALYSIS.md  DAY2_ARCHITECTURE_DIAGRAM.md  DAY2_ASYNC_CONCEPTS_ANALYSIS.md  DAY2_MORNING_DEVELOPMENT_DOCUMENTATION.md  DAY3_CONTAINERIZATION_TECHNICAL_GUIDE.md  DAY4_MCP_IMPLEMENTATION_GUIDE.md  DAY4_MCP实现总结.md  FASTAPI_AUTO_DOCS_ANALYSIS.md  FLOWER_NODE_CONFLICT_SOLUTION.md  MCP 调试方案.md  MCP_使用指南.md  PROJECT_CELERY_ANALYSIS.md  PROJECT_IMPLEMENTATION_GUIDE.md  README.md  README_IMPLEMENTATION.md  TIMEZONE_FIX_TECHNICAL_GUIDE.md  day3-morning-config-security.md
scripts/: docker-test.sh  test-container-deployment.sh
test/: QUICK_START.md  README.md  integration-test-plan.md  test_claude_connection.py  test_mcp_simple.py
tests/: README.md  conftest.py.backup  conftest.py.moved  conftest_simple.py  test_ai_service.py  test_async_features.py  test_database.py  test_main.py  test_mcp_server.py  test_standalone.py
(+40 files in other folders)
