[project]
name = "async-ai-task-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
    # MCP (Model Context Protocol) dependencies
    "mcp>=1.0.0",
    "anthropic>=0.25.0",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
]
