[project]
name = "async-ai-task-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0", # Async HTTP client to replace requests
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
    # MCP (Model Context Protocol) dependencies
    "mcp>=1.0.0",
    "anthropic>=0.25.0",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "httpx>=0.27.0",  # Already in main deps but needed for testing
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "pytest-watch>=4.2.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
    "pre-commit>=3.8.0",
]

# Quality assurance dependencies
qa = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
    "pylint>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
